--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-eu-digital-identity-wallet.github.io
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>The European Digital Identity Wallet</title>
+    <meta http-equiv="refresh" content="7; url='https://eu-digital-identity-wallet.github.io/eudi-doc-architecture-and-reference-framework'" />
+  </head>
+  <body>
+    <p><a href="https://eu-digital-identity-wallet.github.io/eudi-doc-architecture-and-reference-framework">The European Digital Identity Wallet</a>. You will be redirected soon!</p>
+  </body>
+</html>
